WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 143843
VarargsForwardingPhase should use bytecode liveness in addition to other uses to determine the last point that a candidate is used
https://bugs.webkit.org/show_bug.cgi?id=143843
Summary
VarargsForwardingPhase should use bytecode liveness in addition to other uses...
Filip Pizlo
Reported
2015-04-16 14:03:45 PDT
...
Attachments
WRONG PATCH
(43.26 KB, patch)
2015-04-16 15:28 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(9.18 KB, patch)
2015-04-25 01:38 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-04-16 15:28:28 PDT
Created
attachment 250955
[details]
WRONG PATCH
Filip Pizlo
Comment 2
2015-04-25 01:38:01 PDT
Created
attachment 251626
[details]
the patch
WebKit Commit Bot
Comment 3
2015-04-25 01:40:06 PDT
Attachment 251626
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGVarargsForwardingPhase.cpp:141: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/dfg/DFGPhantomInsertionPhase.cpp:127: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 4
2015-04-27 11:09:42 PDT
Comment on
attachment 251626
[details]
the patch r=me
Filip Pizlo
Comment 5
2015-04-27 11:50:49 PDT
Landed in
http://trac.webkit.org/changeset/183406
Filip Pizlo
Comment 6
2015-04-28 10:39:40 PDT
This appears to have regressed V8Spider/raytrace by 30% and Octane/raytrace by 9%. I think I broke VarargsForwarding with this change.
Filip Pizlo
Comment 7
2015-04-28 10:56:05 PDT
(In reply to
comment #6
)
> This appears to have regressed V8Spider/raytrace by 30% and Octane/raytrace > by 9%. I think I broke VarargsForwarding with this change.
The fix is:
https://bugs.webkit.org/show_bug.cgi?id=144340
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug